panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__struct__test_multiple_declarators_of_unnamed_struct_have_same_type.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/struct/test_multiple_declarators_of_unnamed_struct_have_same_type.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/struct/test_multiple_declarators_of_unnamed_struct_have_same_type.c"
   (function-definition external stack-size=40
      (main~0 `fn() -> int` (static main))
      (compound-statement
         (struct ∅~2
            (member x @0 `int`))
         (definition (p1~3 `ptr<struct ∅~2 complete>` @0) (noop-type-conversion `ptr<struct ∅~2 complete>` @0 (nullptr `nullptr_t` @0)))
         (definition (p2~4 `ptr<struct ∅~2 complete>` @8) (noop-type-conversion `ptr<struct ∅~2 complete>` @8 (nullptr `nullptr_t` @8)))
         (return
            (ptr-equal `int` @16
               (p1~3 `ptr<struct ∅~2 complete>` @0)
               (p2~4 `ptr<struct ∅~2 complete>` @8))))))

----- stderr -----
