panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__struct__test_pointer_to_incomplete_struct.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/struct/test_pointer_to_incomplete_struct.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/struct/test_pointer_to_incomplete_struct.c"
   (declaration external (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)) ∅)
   (typedef size_t `unsigned long`)
   (function-definition external stack-size=24
      (f~2 `fn(p: ptr<struct T~1>) -> unsigned long` (static f))
      (params
         (p~4 `ptr<struct T~1>` @0))
      (compound-statement
         (return (8 `unsigned long` @8))))
   (function-definition external stack-size=56
      (main~5 `fn() -> int` (static main))
      (compound-statement
         (definition (p~7 `ptr<struct T~1>` @0) (noop-type-conversion `ptr<struct T~1>` @0 (nullptr `nullptr_t` @0)))
         (definition (q~8 `ptr<struct T~1>` @8) (noop-type-conversion `ptr<struct T~1>` @8 (nullptr `nullptr_t` @8)))
         (expression
            (call `int` @16
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @24
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @32
                  (noop-type-conversion `ptr<char>` @32
                     (addressof `ptr<array<char; 4>>` @32
                        (string `array<char; 4>` @void "%d\n\0"))))
               (ptr-equal `int` @40
                  (p~7 `ptr<struct T~1>` @0)
                  (q~8 `ptr<struct T~1>` @8))))
         (return
            (truncate `int` @16
               (call `unsigned long` @24
                  (addressof `ptr<fn(p: ptr<struct T~1>) -> unsigned long>` @32
                     (f~2 `fn(p: ptr<struct T~1>) -> unsigned long` (static f)))
                  (p~7 `ptr<struct T~1>` @0)))))))

----- stderr -----
