panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__struct__test_sizeof_union.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/struct/test_sizeof_union.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/struct/test_sizeof_union.c"
   (declaration external (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)) ∅)
   (union U~1
      (member x @0 `array<int; 2>`)
      (member c @0 `char`))
   (union U2~2
      (member c @0 `char`)
      (member x @0 `array<int; 3>`))
   (function-definition external stack-size=56
      (main~3 `fn() -> int` (static main))
      (compound-statement
         (expression
            (call `int` @0
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @8
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @16
                  (noop-type-conversion `ptr<char>` @16
                     (addressof `ptr<array<char; 9>>` @16
                        (string `array<char; 9>` @void "%zu %zu\n\0"))))
               (4 `unsigned long` @24)
               (12 `unsigned long` @32))))))

----- stderr -----
